# open-ag-ui-demo-agno

./: .gitignore  CLAUDE.md  README.md  generate-ai-frontend-prompt.md  test_market_analysis.py
.bmad-core/: install-manifest.yaml
agent/: .env.example  main.py  pyproject.toml  stock_analysis.py  verify_credentials.py
agent/market_analysis_v2/: README.md  __init__.py  agents.py  stub_data.py  tools.py  workflow.py
agent/tests/test_market_analysis_v2/: __init__.py  test_agents.py  test_integration.py  test_tools.py  test_validation.py  test_workflow.py
docs/: ag-ui-developer-guide.md  front-end-spec.md  market-analysis-architecture.md  market-analysis-brief.md  prd.md
docs/qa/: story-3-acceptance-criteria-verification.md
docs/qa/gates/: story-3-api-integration-qa-gate.yaml
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/api/market-analysis-v2-stub/: route.ts
frontend/src/app/components/: cash-panel.tsx  generative-canvas.tsx  prompt-panel.tsx
frontend/src/app/components/chart-components/: bar-chart.tsx  line-chart.tsx
frontend/src/app/components/market-analysis/: analysis-progress-tracker.tsx  economic-data-card.tsx  insights-summary.tsx  market-analysis-panel.tsx  market-query-input.tsx  news-analysis-card.tsx  portfolio-impact-matrix.tsx
frontend/src/types/: market-analysis.ts
